# sidechain

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  BUG_REPORT.md  CLAUDE.md  COMPILATION_FIXES_NEEDED.md  COMPILATION_STATUS.md  Makefile  PLAN.md  PRIORITIES_COMPLETE.md  PRIORITY_1_2_3_SUMMARY.md  PRIORITY_IMPLEMENTATION_STATUS.md  README.md  REFACTORING_SUMMARY.md  WARNINGS_ANALYSIS.md  WINDOWS.md  codecov.yml  fix-vcxproj.sh  plugin_build_output.txt  plugin_build_output_v2.txt  test_system_config.sh
backend/services/audio-analysis/: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: .gitignore  AudioPluginHost.rst  BACKEND_INVESTIGATION_NOTES.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Doxyfile  EMAIL_SETUP.md  Makefile  OPTIMIZE_DOXYGEN.md  README.md  SPEED_OPTIMIZATION.md  STRUCTURE.md  WAVEFORM_IMPLEMENTATION.md  architecture.rst  cmake-modularization.md  conf.py  development.rst  generate-godoc.sh  generate-pkgsite.sh  getting-started.rst  index.rst  linkify-test.md  rebuild-docs.sh  requirements.txt  test-build.sh  verify-doxygen-docs.sh
docs/api/: classBufferAudioPlayer_1_1ProgressTimer.rst  classCommentRow.rst  classCommentRowComponent.rst  classCommentsPanel.rst  classCommentsPanelComponent.rst  classCommentsPanel_1_1MentionListener.rst  classConnectionIndicator.rst  classEditProfile.rst  classEmojiReactionsPanel.rst  classFollowUserRowComponent.rst  classFollowersList.rst  classFollowersListComponent.rst  classHeader.rst  classHeaderComponent.rst  classHttpErrorHandler.rst  classLongPressWithProgress.rst  classMIDICapture.rst  classMessageThreadComponent.rst  classMultiHoverState.rst  classNotificationBell.rst  classNotificationListComponent.rst  classNotificationRow.rst  classNotificationRowComponent.rst  classOutcome_3_01void_01_4.rst  classPostsFeed.rst  classProfile.rst  classProfileComponent.rst  classProfileSetupComponent.rst  classRecording.rst  classRecordingComponent.rst  classSearchComponent.rst  classSidechainAudioProcessor.rst  classStoryRecording.rst  classStoryViewerComponent.rst  classStreamChatClient.rst  classUploadComponent.rst  classUserDataStore.rst  classUserDiscoveryComponent.rst  class_view_hierarchy.rst.include  define_WebSocketClient_8h_1abc7800627ab844191a83c45565297b2e.rst  (+410 more)
docs/architecture/: DI_CONTAINER_OVERVIEW.md  DI_KERNEL_IMPLEMENTATION.md  DI_KERNEL_OVERVIEW.md  README.md
docs/backend/: index.rst  overview.rst
docs/build-docs/: CMakeCache.txt  CMakeDoxyfile.in  CMakeDoxygenDefaults.cmake  Doxyfile  Makefile  cmake_install.cmake
docs/build-docs/doctrees/: AudioPluginHost.doctree  BUILD_INSTRUCTIONS.doctree  CODE_DOCS_GUIDE.doctree  OPTIMIZE_DOXYGEN.doctree  README_CODE_DOCS.doctree  VERIFY_DOXYGEN.doctree  architecture.doctree  development.doctree  getting-started.doctree  index.doctree  linkify-test.doctree
docs/build-docs/html/: .buildinfo  AudioPluginHost.html  BUILD_INSTRUCTIONS.html  CODE_DOCS_GUIDE.html  OPTIMIZE_DOXYGEN.html  README_CODE_DOCS.html  VERIFY_DOXYGEN.html  architecture.html  development.html  genindex.html  getting-started.html  index.html  linkify-test.html  objects.inv  search.html  searchindex.js
docs/doxygen/xml/: AggregatedFeedGroup_8h.xml  AggregatedFeedResponse_8h.xml  Animation_8cpp.xml  Animation_8h.xml  Async_8cpp.xml  Async_8h.xml  AudioCapture_8cpp.xml  AudioCapture_8h.xml  AudioSnippetRecorder_8cpp.xml  AudioSnippetRecorder_8h.xml  AuthComponent_8cpp.xml  AuthComponent_8h.xml  BufferAudioPlayer_8cpp.xml  BufferAudioPlayer_8h.xml  Colors_8h.xml  CommentComponent_8cpp.xml  CommentComponent_8h.xml  ConnectionIndicator_8h.xml  Constants_8h.xml  Doxyfile.xml  EditProfileComponent_8cpp.xml  EditProfileComponent_8h.xml  EmojiReactionsPanel_8cpp.xml  EmojiReactionsPanel_8h.xml  FeedDataManager_8cpp.xml  FeedDataManager_8h.xml  FeedPost_8cpp.xml  FeedPost_8h.xml  FeedResponse_8h.xml  FollowersListComponent_8cpp.xml  FollowersListComponent_8h.xml  HeaderComponent_8cpp.xml  HeaderComponent_8h.xml  HoverState_8h.xml  HttpAudioPlayer_8cpp.xml  HttpAudioPlayer_8h.xml  HttpErrorHandler_8h.xml  ImageCache_8cpp.xml  ImageCache_8h.xml  Image_8cpp.xml  (+207 more)
docs/guides/: DISTRIBUTED_TRACING.md  DI_CONTAINER_INTEGRATION.md  DI_KERNEL_INTEGRATION.md  README.md  TRACING_TEST_RESULTS.md
docs/plugin-architecture/: architecture.rst  data-flow.rst  index.rst  services.rst  stores.rst  threading.rst
plugin/: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Sidechain.jucer  UTIL_USAGE_ANALYSIS.md  docker-compose.yml  find_utf8.py
plugin/Source/: AudioCapture.cpp  AudioCapture.h  AudioPlayer.cpp  AudioPlayer.h  AuthComponent.cpp  CommentComponent.cpp  CommentComponent.h  ConnectionIndicator.h  EditProfileComponent.cpp  EditProfileComponent.h  EmojiReactionsPanel.cpp  EmojiReactionsPanel.h  FeedDataManager.cpp  FeedDataManager.h  FeedPost.cpp  FeedPost.h  NetworkClient.cpp  NetworkClient.h  NotificationBellComponent.h  NotificationListComponent.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PostCardComponent.cpp  PostCardComponent.h  PostsFeedComponent.cpp  PostsFeedComponent.h  ProfileComponent.cpp  ProfileComponent.h  ProfileSetupComponent.cpp  ProfileSetupComponent.h  RecordingComponent.cpp  RecordingComponent.h  SocialFeed.cpp  SocialFeed.h  TimeUtils.cpp  UploadComponent.cpp  UploadComponent.h  UserCardComponent.cpp  (+5 more)
plugin/Source/audio/: AudioPlayer.cpp  AudioPlayer.h  (+1 more)
plugin/Tests/: Makefile  NetworkClientTest.cpp  PluginEditorTest.cpp
plugin/cmake/: CPUCores.cmake  CheckFormat.cmake  CompilerFlags.cmake  Dependencies.cmake  Install.cmake  JUCECache.cmake  JuceHeaderHelper.cpp  Linting.cmake  Options.cmake  Tests.cmake  WindowsToolchain.cmake
plugin/docs/: ARCHITECTURE.md  ARCHITECTURE_RXCPP_SLICES.md  README.md  TRACING_IMPLEMENTATION.md  conf.py  index.rst
plugin/source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Version.h.in
plugin/tests/: AudioCaptureTest.cpp  EntitySliceTest.cpp  FeedDataTest.cpp  MessagingE2ETest.cpp  NetworkClientTest.cpp  PostCardTest.cpp  UI_COMPONENT_TESTING.md  run_tests.cpp
(+3747 files in other folders)
